--- a/new.html
+++ b/new.html
@@ -29,6 +29,27 @@
 <div class="div5"> shet</div>
 </div>
 
+<form action="submit.php" method="post">
+  <label for="name">Your Name:</label>
+  <input type="text" id="name" name="name">
+  <br><br>
+  <label for="email">Your Email:</label>
+  <input type="email" id="email" name="email">
+  <br><br>
+  <input type="submit" value="Send">
+</form>
 
+
+<label for="topic">Choose a topic:</label><br>
+<select id="topic" name="topic">
+  <option value="general">General</option>
+  <option value="order">Order</option>
+  <option value="support">Support</option>
+</select>
+<select>
+  <option value="shet">chou</option>
+  <option value="shet">gusion</option>
+  <option value="shet">fanny</option>
+</select> 
   </body>
 </html>
