--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     
     <ol>
-        <li>Fried Chicken</li>
+        <li>Fried Chickens</li>
         <li>Fries</li>
         <li>Sweets</li>
     </ol>
