--- a/tiwala.html
+++ b/tiwala.html
@@ -9,12 +9,20 @@
 <body>
     <nav class="navbar">
         <nav class="navbar-links">
-            <a href="index.html">Home</a>
-            <a href="#new.html">doon</a>
+            <a href="#hero">Home</a>
+            <a href="#doon">doon</a>
             <a href="#tiwala.html">Tiwala</a>
+        </nav>
     </nav>
 
-    
+    <section class="hero" id="hero">
+        <h1>Welcome to Tiwala!</h1>
+        <p>Your trust is our priority.</p>
+    </section>
+
+    <section class="doon" id="doon">
+        <h1>kinginamo boss</h1>
+    </section>
 
 
 </body>
