--- a/tiwala.html
+++ b/tiwala.html
@@ -17,7 +17,7 @@
 
     <section class="hero" id="hero">
         <h1>Welcome to Tiwala!</h1>
-        <p>Your trust is our priority.</p>
+        <p>Your trust is our prioritsy.</p>
     
     </section>
 
