--- a/tiwala.html
+++ b/tiwala.html
@@ -11,7 +11,7 @@
         <nav class="navbar-links">
             <a href="#hero">Home</a>
             <a href="#doon">doon</a>
-            <a href="#tiwala.html">Tiwalas</a>
+            <a href="#tiwala.html">Tiwala</a>
         </nav>
     </nav>
 
