--- a/tiwala.html
+++ b/tiwala.html
@@ -16,7 +16,7 @@
     </nav>
 
     <section class="hero" id="hero">
-        <h1>Welcome to Tiwalsa!</h1>
+        <h1>Welcome to Tiwala!</h1>
         <p>Your trust is our priority.</p>
     
     </section>
