--- a/lockedin.html
+++ b/lockedin.html
@@ -8,5 +8,11 @@
 <body>
     
 </body>
-<script src="lockedin.js"></script>
+<!-- <script src="lockedin1.js"></script> -->
+<script src="lockedin2.js"></script>
+<!--<script src="lockedin3.js"></script>
+<script src="lockedin4.js"></script>
+<script src="lockedin5.js"></script>
+<script src="lockedin6.js"></script>
+<script src="lockedin7.js"></script> -->
 </html>
